# Standard-Tibetan-Word-Segmenter

./: .gitignore  CMakeLists.txt  README.md  copy-datasets.cmake
src/: main.cpp
src/neural/: datahandler.cpp  datahandler.h  neuralnet.cpp  neuralnet.h
src/utility/: filehandling.cpp  filehandling.h  scrubber.cpp  scrubber.h
